Trabalho/C/trabmainC.output
Terminals unused in grammar

   NAME
   ESPACO
   FIMENTAO
   NUMBER
   PLUS
   MULT
   END


Grammar

    0 $accept: program $end

    1 program: PROGRAM lines

    2 lines: line
    3      | line lines

    4 line: statement ROWEND

    5 $@1: %empty

    6 statement: ENTRADA $@1 varlist
    7          | SAIDA varlist
    8          | cmds
    9          | FIM

   10 varlist: id varlist
   11        | id

   12 cmds: cmd cmds
   13     | cmd

   14 $@2: %empty

   15 cmd: FACA id VEZES $@2 ROWEND lines FIMFACA

   16 $@3: %empty

   17 cmd: ENQUANTO id FACA $@3 ROWEND lines FIMENQUANTO

   18 $@4: %empty

   19 cmd: SE id ENTAO $@4 ROWEND lines FIMSE ROWEND check
   20    | id ASSIGN id
   21    | INC AP id FP
   22    | ZERA AP id FP

   23 $@5: %empty

   24 check: SENAO $@5 ROWEND lines FIMSENAO

   25 $@6: %empty

   26 check: $@6 line


Terminals, with rules where they appear

$end (0) 0
error (256)
ENTRADA (258) 6
SAIDA (259) 7
FIM (260) 9
FACA (261) 15 17
VEZES (262) 15
ENQUANTO (263) 17
SE (264) 19
ENTAO (265) 19
SENAO (266) 24
INC (267) 21
ZERA (268) 22
NAME (269)
ESPACO (270)
FIMFACA (271) 15
FIMENTAO (272)
FIMSENAO (273) 24
FIMENQUANTO (274) 17
FIMSE (275) 19
ROWEND (276) 4 15 17 19 24
NUMBER (277)
ASSIGN (278) 20
PLUS (279)
AP (280) 21 22
FP (281) 21 22
MULT (282)
END (283)
PROGRAM (284) 1
id (285) 10 11 15 17 19 20 21 22


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
lines (33)
    on left: 2 3, on right: 1 3 15 17 19 24
line (34)
    on left: 4, on right: 2 3 26
statement (35)
    on left: 6 7 8 9, on right: 4
$@1 (36)
    on left: 5, on right: 6
varlist (37)
    on left: 10 11, on right: 6 7 10
cmds (38)
    on left: 12 13, on right: 8 12
cmd (39)
    on left: 15 17 19 20 21 22, on right: 12 13
$@2 (40)
    on left: 14, on right: 15
$@3 (41)
    on left: 16, on right: 17
$@4 (42)
    on left: 18, on right: 19
check (43)
    on left: 24 26, on right: 19
$@5 (44)
    on left: 23, on right: 24
$@6 (45)
    on left: 25, on right: 26


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM . lines

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    lines      go to state 12
    line       go to state 13
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


State 2

    0 $accept: program . $end

    $end  shift, and go to state 17


State 3

    6 statement: ENTRADA . $@1 varlist

    $default  reduce using rule 5 ($@1)

    $@1  go to state 18


State 4

    7 statement: SAIDA . varlist

    id  shift, and go to state 19

    varlist  go to state 20


State 5

    9 statement: FIM .

    $default  reduce using rule 9 (statement)


State 6

   15 cmd: FACA . id VEZES $@2 ROWEND lines FIMFACA

    id  shift, and go to state 21


State 7

   17 cmd: ENQUANTO . id FACA $@3 ROWEND lines FIMENQUANTO

    id  shift, and go to state 22


State 8

   19 cmd: SE . id ENTAO $@4 ROWEND lines FIMSE ROWEND check

    id  shift, and go to state 23


State 9

   21 cmd: INC . AP id FP

    AP  shift, and go to state 24


State 10

   22 cmd: ZERA . AP id FP

    AP  shift, and go to state 25


State 11

   20 cmd: id . ASSIGN id

    ASSIGN  shift, and go to state 26


State 12

    1 program: PROGRAM lines .

    $default  reduce using rule 1 (program)


State 13

    2 lines: line .
    3      | line . lines

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    $default  reduce using rule 2 (lines)

    lines      go to state 27
    line       go to state 13
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


State 14

    4 line: statement . ROWEND

    ROWEND  shift, and go to state 28


State 15

    8 statement: cmds .

    $default  reduce using rule 8 (statement)


State 16

   12 cmds: cmd . cmds
   13     | cmd .

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    $default  reduce using rule 13 (cmds)

    cmds  go to state 29
    cmd   go to state 16


State 17

    0 $accept: program $end .

    $default  accept


State 18

    6 statement: ENTRADA $@1 . varlist

    id  shift, and go to state 19

    varlist  go to state 30


State 19

   10 varlist: id . varlist
   11        | id .

    id  shift, and go to state 19

    $default  reduce using rule 11 (varlist)

    varlist  go to state 31


State 20

    7 statement: SAIDA varlist .

    $default  reduce using rule 7 (statement)


State 21

   15 cmd: FACA id . VEZES $@2 ROWEND lines FIMFACA

    VEZES  shift, and go to state 32


State 22

   17 cmd: ENQUANTO id . FACA $@3 ROWEND lines FIMENQUANTO

    FACA  shift, and go to state 33


State 23

   19 cmd: SE id . ENTAO $@4 ROWEND lines FIMSE ROWEND check

    ENTAO  shift, and go to state 34


State 24

   21 cmd: INC AP . id FP

    id  shift, and go to state 35


State 25

   22 cmd: ZERA AP . id FP

    id  shift, and go to state 36


State 26

   20 cmd: id ASSIGN . id

    id  shift, and go to state 37


State 27

    3 lines: line lines .

    $default  reduce using rule 3 (lines)


State 28

    4 line: statement ROWEND .

    $default  reduce using rule 4 (line)


State 29

   12 cmds: cmd cmds .

    $default  reduce using rule 12 (cmds)


State 30

    6 statement: ENTRADA $@1 varlist .

    $default  reduce using rule 6 (statement)


State 31

   10 varlist: id varlist .

    $default  reduce using rule 10 (varlist)


State 32

   15 cmd: FACA id VEZES . $@2 ROWEND lines FIMFACA

    $default  reduce using rule 14 ($@2)

    $@2  go to state 38


State 33

   17 cmd: ENQUANTO id FACA . $@3 ROWEND lines FIMENQUANTO

    $default  reduce using rule 16 ($@3)

    $@3  go to state 39


State 34

   19 cmd: SE id ENTAO . $@4 ROWEND lines FIMSE ROWEND check

    $default  reduce using rule 18 ($@4)

    $@4  go to state 40


State 35

   21 cmd: INC AP id . FP

    FP  shift, and go to state 41


State 36

   22 cmd: ZERA AP id . FP

    FP  shift, and go to state 42


State 37

   20 cmd: id ASSIGN id .

    $default  reduce using rule 20 (cmd)


State 38

   15 cmd: FACA id VEZES $@2 . ROWEND lines FIMFACA

    ROWEND  shift, and go to state 43


State 39

   17 cmd: ENQUANTO id FACA $@3 . ROWEND lines FIMENQUANTO

    ROWEND  shift, and go to state 44


State 40

   19 cmd: SE id ENTAO $@4 . ROWEND lines FIMSE ROWEND check

    ROWEND  shift, and go to state 45


State 41

   21 cmd: INC AP id FP .

    $default  reduce using rule 21 (cmd)


State 42

   22 cmd: ZERA AP id FP .

    $default  reduce using rule 22 (cmd)


State 43

   15 cmd: FACA id VEZES $@2 ROWEND . lines FIMFACA

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    lines      go to state 46
    line       go to state 13
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


State 44

   17 cmd: ENQUANTO id FACA $@3 ROWEND . lines FIMENQUANTO

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    lines      go to state 47
    line       go to state 13
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


State 45

   19 cmd: SE id ENTAO $@4 ROWEND . lines FIMSE ROWEND check

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    lines      go to state 48
    line       go to state 13
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


State 46

   15 cmd: FACA id VEZES $@2 ROWEND lines . FIMFACA

    FIMFACA  shift, and go to state 49


State 47

   17 cmd: ENQUANTO id FACA $@3 ROWEND lines . FIMENQUANTO

    FIMENQUANTO  shift, and go to state 50


State 48

   19 cmd: SE id ENTAO $@4 ROWEND lines . FIMSE ROWEND check

    FIMSE  shift, and go to state 51


State 49

   15 cmd: FACA id VEZES $@2 ROWEND lines FIMFACA .

    $default  reduce using rule 15 (cmd)


State 50

   17 cmd: ENQUANTO id FACA $@3 ROWEND lines FIMENQUANTO .

    $default  reduce using rule 17 (cmd)


State 51

   19 cmd: SE id ENTAO $@4 ROWEND lines FIMSE . ROWEND check

    ROWEND  shift, and go to state 52


State 52

   19 cmd: SE id ENTAO $@4 ROWEND lines FIMSE ROWEND . check

    SENAO  shift, and go to state 53

    $default  reduce using rule 25 ($@6)

    check  go to state 54
    $@6    go to state 55


State 53

   24 check: SENAO . $@5 ROWEND lines FIMSENAO

    $default  reduce using rule 23 ($@5)

    $@5  go to state 56


State 54

   19 cmd: SE id ENTAO $@4 ROWEND lines FIMSE ROWEND check .

    $default  reduce using rule 19 (cmd)


State 55

   26 check: $@6 . line

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    line       go to state 57
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


State 56

   24 check: SENAO $@5 . ROWEND lines FIMSENAO

    ROWEND  shift, and go to state 58


State 57

   26 check: $@6 line .

    $default  reduce using rule 26 (check)


State 58

   24 check: SENAO $@5 ROWEND . lines FIMSENAO

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    lines      go to state 59
    line       go to state 13
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


State 59

   24 check: SENAO $@5 ROWEND lines . FIMSENAO

    FIMSENAO  shift, and go to state 60


State 60

   24 check: SENAO $@5 ROWEND lines FIMSENAO .

    $default  reduce using rule 24 (check)
